removing wrong directive

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const randomChallenge = () => {
         <DeckPile position="left" />
         <div class="center-content">
           <div class="card-container">
-            <Card isFlipped={false} isDrawn={false} client:load>
+            <Card isFlipped={false} isDrawn={false}>
               <p id="challenge-text"></p>
             </Card>
           </div>
