update nameof the rules files

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import DeckPile from '../components/DeckPile.astro';
-import Rules from '../components/Rules.astro';
+import Rulesjeje from '../components/Rulesjeje.astro';
 import { challenges } from '../data/challenges';
 
 const randomChallenge = () => {
